# blitz

./: CLAUDE.md  Neuralnet.hs  blitz.cabal  cabal.project  flake.nix  ghcid.sh
bench/: Main.hs
lib/: Blitz.hs
lib/Blitz/: Draw.hs  Framebuffer.hs
resources/: atlas.pxo
src/: Main.hs
test/: BlitzSpec.hs  Main.hs
