cabal-version:      3.4
name:               blitz
version:            0.1.0.0
-- synopsis:
-- description:
homepage:           https://sonic-stride.com/
license:            MIT
author:             Johan Yngman
maintainer:         johan.yngman@gmail.com
-- copyright:
category:           Web
build-type:         Simple
-- extra-doc-files:    CHANGELOG.md
-- extra-source-files:

common warnings
    ghc-options:      -O2 -Weverything -Wno-missing-signatures -Wno-missing-exported-signatures
                      -Wno-implicit-prelude -Wno-missing-export-lists -Wno-missing-import-lists
                      -Wno-monomorphism-restriction -Wno-type-defaults -Wno-missing-safe-haskell-mode
                      -Wno-unsafe -Wno-missing-local-signatures -Wno-missing-kind-signatures
                      -Wno-all-missed-specialisations -Wno-missed-specialisations -Wno-ambiguous-fields
                      -Wno-missing-deriving-strategies -Wno-prepositive-qualified-module
                      -Wno-unused-top-binds -threaded -Wno-missing-role-annotations

common extensions
    default-extensions: OverloadedStrings,
                        DuplicateRecordFields,
                        NoFieldSelectors,
                        StrictData,
                        OverloadedRecordDot,
                        AllowAmbiguousTypes,
                        DataKinds,
                        TypeFamilies,
                        RecordWildCards,
                        DeriveDataTypeable,
                        DerivingStrategies

library
    import:           warnings
    import:           extensions
    hs-source-dirs:   lib
    exposed-modules:  Blitz,
                      Blitz.Draw
    build-depends:    base,
                      accelerate,
                      accelerate-io-vector,
                      accelerate-llvm-native,
                      vector
    hs-source-dirs:   src
    default-language: GHC2021

executable blitz
    import:           warnings
    import:           extensions
    main-is:          Main.hs
    build-depends:    base,
                      blitz,
                      foreign-store,
                      h-raylib
    hs-source-dirs:   src
    default-language: GHC2021
    ghc-options:      -threaded -rtsopts -with-rtsopts=-N

test-suite blitz-test
    import:           warnings
    import:           extensions
    type:             exitcode-stdio-1.0
    main-is:          Main.hs
    other-modules:    BlitzSpec
    build-depends:    base,
                      blitz,
                      hspec,
                      QuickCheck
    hs-source-dirs:   test
    default-language: GHC2021
    ghc-options:      -threaded -rtsopts -with-rtsopts=-N

benchmark blitz-bench
    import:           warnings
    import:           extensions
    type:             exitcode-stdio-1.0
    main-is:          Main.hs
    build-depends:    base,
                      blitz,
                      criterion
    hs-source-dirs:   bench
    default-language: GHC2021
    ghc-options:      -threaded -rtsopts -with-rtsopts=-N
